apps/rutorrent/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rutorrent-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: rutorrent-tls
      hosts:
        - qbit.picturo.us
  rules:
    - host: qbit.picturo.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rutorrent
                port:
                  number: 8080
